--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -29,6 +29,22 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        
+      # Test the Docker Image Build
+      - name: Build the Image
+        run: |
+          echo "Build the Docker Image"
+          docker build -t rust_builder .
+
+      # Show Compiler Version
+      - name: Show Compiler Version
+        id: rust_version
+        run: | 
+          rust_version_info=`docker run -t rust bash -c "rustc --version"`          
+          rust_version=`echo "$rust_version_info" | cut -d' ' -f1`
+          echo "* Rust Compiler Version:" 
+          echo "$rust_version_info | $rust_version"
+          echo "version=$rust_version" >> $GITHUB_OUTPUT
       
 #      - name: Login to DockerHub
 #        uses: docker/login-action@v1 
@@ -50,4 +66,5 @@ jobs:
 #          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
+            ghcr.io/${{ github.actor }}/rust-builder:${{ steps.rust_version.outputs.version }}
             ghcr.io/${{ github.actor }}/rust-builder:latest
