--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -41,7 +41,7 @@ jobs:
         id: rust_version
         run: | 
           rust_version_info=`docker run -t rust_builder bash -c "rustc --version"`          
-          rust_version=`echo "$rust_version_info" | cut -d' ' -f1`
+          rust_version=`echo "$rust_version_info" | awk '{print $2}'`
           echo "* Rust Compiler Version:" 
           echo "$rust_version_info | $rust_version"
           echo "version=$rust_version" >> $GITHUB_OUTPUT
