--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -45,6 +45,19 @@ jobs:
           echo "* Rust Compiler Version:" 
           echo "$rust_version_info | $rust_version"
           echo "version=$rust_version" >> $GITHUB_OUTPUT
+
+      # Show Compiler Version
+      - name: Set Compiler Version Tag
+        id: rust_version
+        run: | 
+          echo "rustc ver: '${{ steps.rust_version.outputs.version }}'"
+          docker tag rust_builder rust_builder:${{ steps.rust_version.outputs.version }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: image_meta
+        uses: docker/metadata-action@v4.3.0
+        with:
+          images: ghcr.io/${{ github.repository }}
       
 #      - name: Login to DockerHub
 #        uses: docker/login-action@v1 
@@ -65,6 +78,5 @@ jobs:
           context: .
 #          platforms: linux/amd64,linux/arm64
           push: true
-          tags: |
-            ghcr.io/${{ github.repository }}:${{ steps.rust_version.outputs.version }}
-            ghcr.io/${{ github.repository }}:latest
+          tags: ${{ steps.image_meta.outputs.tags }}
+          labels: ${{ steps.image_meta.outputs.labels }}          
