--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -66,17 +66,17 @@ jobs:
 #          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2.1.0 
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4.0.0
         with:
           context: .
 #          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.image_meta.outputs.tags }}
+          tags: [ ${{ steps.image_meta.outputs.tags }}, "ghcr.io/${{ github.repository }}:${{ steps.rust_version.outputs.version }}" ]
           labels: ${{ steps.image_meta.outputs.labels }}          
