--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -28,7 +28,7 @@ jobs:
 #        uses: docker/setup-qemu-action@v1
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2.5.0
         
       # Test the Docker Image Build
       - name: Build the Image
@@ -58,6 +58,14 @@ jobs:
         uses: docker/metadata-action@v4.3.0
         with:
           images: ghcr.io/${{ github.repository }}
+
+      # Show Compiler Version
+      - name: Show Image Tags and Labels
+        run: | 
+          echo "* Image Tags:" 
+          echo "${{ steps.image_meta.outputs.tags }}"
+          echo "* Image Labels:" 
+          echo "${{ steps.image_meta.outputs.labels }}"
       
 #      - name: Login to DockerHub
 #        uses: docker/login-action@v2.1.0
@@ -78,5 +86,5 @@ jobs:
           context: .
 #          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.image_meta.outputs.tags }}, "ghcr.io/${{ github.repository }}:${{ steps.rust_version.outputs.version }}"
+          tags: ${{ steps.image_meta.outputs.tags }}, ghcr.io/${{ github.repository }}:${{ steps.rust_version.outputs.version }}
           labels: ${{ steps.image_meta.outputs.labels }}          
