--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -66,6 +66,8 @@ jobs:
           echo "${{ steps.image_meta.outputs.tags }}"
           echo "* Image Labels:" 
           echo "${{ steps.image_meta.outputs.labels }}"
+          echo "* Image Inspection:" 
+          docker inspect rust_builder
       
 #      - name: Login to DockerHub
 #        uses: docker/login-action@v2.1.0
@@ -80,11 +82,9 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Build and push
-        uses: docker/build-push-action@v4.0.0
-        with:
-          context: .
-#          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.image_meta.outputs.tags }}, ghcr.io/${{ github.repository }}:${{ steps.rust_version.outputs.version }}
-          labels: ${{ steps.image_meta.outputs.labels }}          
+      - name: Push the Image to the Repository
+        run: |
+          docker tag rust_builder:latest ghcr.io/${{ github.repository }}:latest
+          docker push ghcr.io/${{ github.repository }}:latest
+
+          
