--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -28,7 +28,9 @@ jobs:
           sudo apt-get -y install git cpanminus
       
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.IMAGE_PUBLISH_TOKEN }}
 
 #      - name: Set up QEMU
 #        uses: docker/setup-qemu-action@v1
