--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -26,6 +26,9 @@ jobs:
           perl --version
           sudo apt-get update 
           sudo apt-get -y install git cpanminus
+          cpanm Process::SubProcess
+          echo "Process::SubProcess Command:"
+          which run_subprocess.pl || true
       
       - name: Checkout
         uses: actions/checkout@v3
@@ -127,7 +130,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.IMAGE_PUBLISH_TOKEN }}
 
       - name: Build and push Docker image
         if: steps.git_tag.outputs.exists == 0
