--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -21,14 +21,14 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         run: echo "Event '${{ github.event_name }}' - Manual Push to Registry" 
 
+#          cpanm Process::SubProcess
+#          echo "Process::SubProcess Command:"
+#          which run_subprocess.pl || true
       - name: Install Git Tools
         run: | 
           perl --version
           sudo apt-get update 
           sudo apt-get -y install git cpanminus
-          cpanm Process::SubProcess
-          echo "Process::SubProcess Command:"
-          which run_subprocess.pl || true
       
       - name: Checkout
         uses: actions/checkout@v3
