--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -21,14 +21,14 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         run: echo "Event '${{ github.event_name }}' - Manual Push to Registry" 
 
-#          cpanm Process::SubProcess
-#          echo "Process::SubProcess Command:"
-#          which run_subprocess.pl || true
       - name: Install Git Tools
         run: | 
           perl --version
           sudo apt-get update 
           sudo apt-get -y install git cpanminus
+          cpanm Process::SubProcess
+          echo "Process::SubProcess Command:"
+          which run_subprocess.pl || true
       
       - name: Checkout
         uses: actions/checkout@v3
@@ -78,7 +78,7 @@ jobs:
           git checkout master
           author_res=`git log -1 | grep -i author | sed -re 's/^[^:]+: ([^<]+) <([^>]+)>.*/\1|\2/i'`
           echo -e "Commit Author:\n$author_res"
-          if [ -z "$author_res" ]; then echo "could not find GIT VERSION COMMIT"; exit 1; fi;
+          if [ -z "$author_res" ]; then echo "could not find GIT COMMIT AUTHOR"; exit 1; fi;
           author_user=`echo "$author_res" | cut -d"|" -f1`
           author_email=`echo "$author_res" | cut -d"|" -f2`
           git config user.name "$author_user"
