--- a/.github/workflows/registry_upload.yml
+++ b/.github/workflows/registry_upload.yml
@@ -26,7 +26,8 @@ jobs:
           perl --version
           sudo apt-get update 
           sudo apt-get -y install git cpanminus
-          cpanm Process::SubProcess
+          
+          cpanm -n Process::SubProcess
           echo "Process::SubProcess Command:"
           which run_subprocess.pl || true
       
