--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -36,7 +36,8 @@ jobs:
       # Show Environment and Compiler Version
       - name: Show Environment and Compiler Version
         run: | 
-          rust_version=`docker run -t rust_builder bash -c "rustc --version"`
+          rust_version_info=`docker run -t rust_builder bash -c "rustc --version"`
+          rust_version=`echo "$rust_version_info" | cut -d' ' -f2`
           echo "* Operating System:" && docker run -t rust_builder cat /etc/os-release
           echo "* Rust Compiler Version: $rust_version"
           echo "* RustUp Version:" && docker run -t rust_builder bash -c "rustup --version"
@@ -44,5 +45,5 @@ jobs:
           echo "* RustUp Toolchains Installed:" && docker run -t rust_builder bash -c "rustup toolchain list"
           echo "* RustUp Components Installed:" && docker run -t rust_builder bash -c "rustup component list --installed"
           echo "* RustUp Components Help:" && docker run -t rust_builder bash -c "rustup component --help"
-          if [ -z "$rust_version" ]; then echo "Rust Installation failed!"; exit 1; fi;
-          
+          if [ -z "$rust_version_info" ]; then echo "Rust Installation failed!"; exit 1; fi;
+          if [ "$rust_version" != "1.60.0" ]; then echo "Rust Version '$rust_version' does not match requested Version"; exit 1; fi;
