--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -21,6 +21,11 @@ jobs:
         run: |
           sudo apt-get update 
           sudo apt-cache search docker | sort
+
+      - name: Install Python Dependencies
+        run: | 
+          python3 --version
+          sudo apt-get update && sudo apt-get -y install git python3-yaml python3-git
         
       - uses: actions/checkout@v2
         
